Re-arranged the website page template to fix column alignments (especially wrt the forum reply page), fixed some css issues - main login boxes' borders made the images in the switchboard page absolute referenced

--- a/web/drupal/sites/all/themes/robogrid/style.css
+++ b/web/drupal/sites/all/themes/robogrid/style.css
@@ -38,6 +38,7 @@ body {
 	display: block;
 	text-align: left;
 	margin: auto;
+	background-color: white;
 }
 h1, h2, h3 {
 	color: #253571;
@@ -79,8 +80,6 @@ ul, ol {
 /* TOP */
 
 #top {
-	float: left;
-	width: 100%;
 	margin-top: -1px;
 	background-color: #253571;
 	/* background: #253571 url(images/footer.png) repeat scroll 50% 50%; */
@@ -88,8 +87,6 @@ ul, ol {
 	overflow: hidden;
 }
 #banner {
-	float: left;
-	width: 100%;
 	height: 94px;
 	background-color: #DFDBD8;
 	background-image: url('images/sr_swoosh.jpg');
@@ -123,7 +120,7 @@ ul, ol {
 	font-weight: normal;
 	vertical-align: middle;
 }
-#user-login-form input {
+#user-login-form input.form-text {
 	border: none;
 }
 #edit-name,
@@ -157,7 +154,6 @@ ul, ol {
 /* SWITCHBOARD MENU */
 
 #switchboard {
-	width: 800px;
 	margin: 0 auto;
 }
 #switchboard img {
@@ -190,15 +186,11 @@ ul, ol {
 /* MAIN */
 
 #main {
-	float: left;
-	width: 100%;
 	background-color: #FFFFFF;
 	padding-bottom: 1em;
 	border-style: solid none none none;
 	border-color: #253571;
-}
-#content {
-	padding: 0 0.5em;
+	padding: 0 20px 0 0.5em;
 }
 .breadcrumb {
 	/* background-color: lime; */
@@ -209,8 +201,8 @@ ul, ol {
 .status {
 	background-color: red; /* debug line: to be changed */
 }
-.node, .comment-preview, #comments, #switchboard {
-	margin: 0px 20px 0px 220px;
+#content {
+	margin-left: 220px;
 }
 
 /* NAVIGATE MENU (across the top bar, in place of the login) */
@@ -238,7 +230,6 @@ ul, ol {
 
 #sidebar-left {
 	float: left;
-	margin: 0 1.5em 1.5em 0;
 	width: 200px;
 }
 #sidebar-left-inner {
@@ -322,8 +313,6 @@ ul, ol {
 /* FOOTER */
 
 #footer {
-	float: left;
-	width: 100%;
 	font-family : Verdana, Geneva, Arial;
 	color : #fff;
 	font-size : 0.8em;
